<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KGame</string>
    <string name="fin_de_la_partie">Fin de la partie !</string>
    <string name="score_label">Score :</string>
    <string name="highscore_label">Meilleur score :</string>
    <string name="rejouer">Rejouer</string>
    <string name="quitter">Quitter</string>
    <string name="bienvenue_sur_le_kgame">Bienvenue sur le KGame !</string>
    <string name="jouer">Jouer</string>
    <string name="copyright">Créé par Damien Boizard en 2020 et 2022</string>
    <string name="options">Options</string>
    <string name="reglages">Réglez ici les options avant de jouer.</string>
    <string name="activer_les_musiques">Activer les musiques</string>
    <string name="retour">Retour</string>
    <string name="afficher_les_fps">Afficher les FPS</string>
    <string name="levels">Levels</string>
    <string name="endless">Endless</string>
    <string name="original">Original</string>
    <string name="lancez_une_partie">Lancez une partie :</string>
    <string name="choix_niveau">Choisissez un level à jouer.</string>
    <string name="level1">1</string>
    <string name="level2">2</string>
    <string name="LevelEndLabel">Fin du Level !</string>
    <string name="menu_principal">Menu principal</string>

</resources>
