<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ic_window_background_color"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ic_background_color"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:fontFamily="serif"
            android:text="@string/options"
            android:textColor="@color/ic_title_color"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="serif"
            android:text="@string/reglages"
            android:textColor="@color/ic_title_color"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/playMusics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/activer_les_musiques"
            android:textColor="@color/ic_title_color"
            android:textSize="20sp"
            android:checked="true"
            android:buttonTint="@color/ic_background_color"/>

        <CheckBox
            android:id="@+id/showFPS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/afficher_les_fps"
            android:textColor="@color/ic_title_color"
            android:textSize="20sp"
            android:checked="false"
            android:buttonTint="@color/ic_background_color"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/retour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/border_button"
            android:padding="10dp"
            android:text="@string/retour"
            android:textColor="@color/ic_button_color"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>