<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ic_window_background_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ic_background_color"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:fontFamily="serif"
            android:text="@string/fin_de_la_partie"
            android:textColor="@color/ic_title_color"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/scoreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="serif"
            android:text="@string/score_label"
            android:textColor="@color/ic_title_color"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="serif"
            android:textColor="@color/ic_title_color"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/highscoreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="serif"
            android:text="@string/highscore_label"
            android:textColor="@color/ic_title_color"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/highscore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="serif"
            android:textColor="@color/ic_title_color"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/rejouer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/border_button"
                android:padding="10dp"
                android:text="@string/rejouer"
                android:textColor="@color/ic_button_color"
                android:textSize="20sp" />

            <Button
                android:id="@+id/retour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/border_button"
                android:padding="10dp"
                android:text="@string/menu_principal"
                android:textColor="@color/ic_button_color"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:id="@+id/options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/border_button"
            android:padding="10dp"
            android:text="@string/options"
            android:textColor="@color/ic_button_color"
            android:textSize="20sp" />

        <Button
            android:id="@+id/quitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/border_button"
            android:padding="10dp"
            android:text="@string/quitter"
            android:textColor="@color/ic_button_color"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>