<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ic_window_background_color"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ic_background_color"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:fontFamily="serif"
            android:text="@string/levels"
            android:textColor="@color/ic_title_color"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="serif"
            android:text="@string/choix_niveau"
            android:textColor="@color/ic_title_color"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"> <!-- Ensemble des niveaux -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"> <!-- Niveaux regroupés par ligne -->
            <Button
                android:id="@+id/level1"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:background="@drawable/level_button"
                android:padding="10dp"
                android:text="@string/level1"
                android:textColor="@color/ic_button_color"
                android:textSize="30sp" /> <!-- Niveau 1 représenté par un bouton -->
            <Button
                android:id="@+id/level2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:background="@drawable/level_button"
                android:padding="10dp"
                android:text="@string/level2"
                android:textColor="@color/ic_button_color"
                android:textSize="30sp" /> <!-- Niveau 2 représenté par un bouton -->
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/retour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/border_button"
            android:padding="10dp"
            android:text="@string/retour"
            android:textColor="@color/ic_button_color"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>